[project]
name = "persistence-reg"
version = "0.1.0"
description = "A minimal pyproject.toml"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
  "keras",
  "gudhi",
]

[dependency-groups]
dev = [
  "ipython",
  "python-lsp-server",
  "jax",
  "torch",
  "scikit-learn",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
