[project]
name = "persistence-reg"
version = "0.1.0"
description = "A minimal pyproject.toml"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
  "keras",
]

[dependency-groups]
dev = [
  "ipython",
  "python-lsp-server",
  "jax",
  "torch",
  "scikit-learn",
  "matplotlib",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" }
]
